# BugCode

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  Dockerfile  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  default.nix  docker-compose.yaml  docker-compose.yaml.1  pyproject.toml  release.nix  requirements.txt  setup.py
CHANGELOG/: README.md  check_pre_tag.py  footer.md
bugcode/: __init__.py  manage.py  start_all.py  start_server.py
bugcode_agent_dispatcher/: __init__.py  config.py  dispatcher.py  dispatcher_io.py  executor.py  executor_helper.py  logger.py
bugcode_agent_parameters_types/: __init__.py  bugcode_agent_parameters_types.py  utils.py
bugcode_plugins/: __main__.py  commands.py
docker/: entrypoint.sh  server.ini
pynixify/: nixpkgs.nix  shell.nix
scripts/: docker-entrypoint.sh  docker-server.ini  github_release.py  merge-conflict-detector.py  model_check.py  sanity_check_file.py
tests/: conftest.py  factories.py  test_ModelObjectFactory.py  test_api_activity_feed.py  test_api_agent.py  test_api_auth.py  test_api_bulk_create.py  test_api_commands.py  test_api_comment.py  test_api_credentials.py  test_api_custom_fields.py  test_api_docs.py  test_api_export_data.py  test_api_get_exploits.py  test_api_global_commands.py  test_api_hosts.py  test_api_info.py  test_api_license.py  test_api_login.py  test_api_non_workspaced_base.py  test_api_pagination.py  test_api_preferences.py  test_api_search_filter.py  test_api_services.py  test_api_session.py  test_api_settings.py  test_api_upload_reports.py  test_api_vulnerability.py  (+18 more)
(+341 files in other folders)
