[tool.poetry]
name = "bugcode-agent-parameters-types"
version = "3.8.15"
description = ""
authors = ["NxPKG <116948796+NxPKG@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
